# Snake

./: README.md
Snake/: CMakeLists.txt
Snake/SFML-2.4.2/: CMakeCache.txt  Makefile  cmake_install.cmake  myproject  platformer.cbp
Snake/inc/: food.hpp  gamebody.hpp  snake.hpp
Snake/src/: food.cpp  gamebody.cpp  main.cpp  snake.cpp
